section 5 mvc course

--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -234,9 +234,12 @@
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\MembershipType.cs" />
+    <Compile Include="Models\Min18YearsIfMember.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\MovieFormViewModel.cs" />
     <Compile Include="ViewModels\MoviesIndexViewModel.cs" />
+    <Compile Include="ViewModels\CustomerFormViewModel.cs" />
     <Compile Include="ViewModels\RandomMovieViewModel.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -247,16 +250,19 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\styles.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
-    <Content Include="material\Section3\Entity-Framework-Cheat-Sheet.pdf" />
-    <Content Include="material\Section2\ASP.NET-MVC-Fundamentals-Cheat-Sheet.pdf" />
-    <Content Include="material\Section2\ASP.NET-MVC-Fundamentals-Exercise-Hints.pdf" />
+    <Content Include="material\Section 03\Entity-Framework-Cheat-Sheet.pdf" />
+    <Content Include="material\Section 02\ASP.NET-MVC-Fundamentals-Cheat-Sheet.pdf" />
+    <Content Include="material\Section 02\ASP.NET-MVC-Fundamentals-Exercise-Hints.pdf" />
+    <Content Include="material\Section 04\Building-Forms-Cheat-Sheet.pdf" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
+    <Content Include="Scripts\DatePickerReady.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
     <Content Include="Scripts\jquery-3.3.1.slim.js" />
@@ -307,9 +313,12 @@
     <Content Include="Views\Customers\Details.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Movies\Details.cshtml" />
+    <Content Include="Views\Customers\CustomerForm.cshtml" />
+    <Content Include="Views\Movies\MovieForm.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="material\Section 05\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
